# husky-cmake

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: areafix.cmake  fidoconf.cmake  hpt.cmake  hptzip.cmake  hpucode.cmake  htick.cmake  husky.cmake  mcpack.cmake  nltools.cmake  smapi.cmake  sqpack.cmake
tests/: CMakeLists.txt  testhptzip.c
