cmake_minimum_required(VERSION 2.8.11)

PROJECT(husky C)

include(FindPerlLibs)
set(ZLIB_ROOT "hptzip/zlib-win32")
include(FindZLIB)
include(CPack)

set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

option(ENABLE_HPT "Build with hpt" ON)
option(ENABLE_HTICK "Build with htick" ON)
option(ENABLE_NLTOOLS "Build with nltools" ON)
option(ENABLE_SQPACK "Build with sqpack" ON)
set(CFGDIR "/etc/ftn" CACHE STRING "Config dir")

if (${PERLLIBS_FOUND})
  set(PERL ON CACHE STRING "Perl")
else()
  set(PERL OFF CACHE STRING "Perl")
endif()

if (${ZLIB_FOUND})
  set(HPTZIP ON CACHE STRING "hptzip")
else()
  set(HPTZIP OFF CACHE STRING "hptzip")
endif()

if (WIN32)
  set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "My multi config types" FORCE)
else(WIN32)
if(CMAKE_BUILD_TYPE MATCHES Debug)
  ADD_DEFINITIONS(-g -DDEBUG -D_DEBUG)
  set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "My multi config types" FORCE)
else(CMAKE_BUILD_TYPE MATCHES Debug)
  ADD_DEFINITIONS(-DNDEBUG)
  set(CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "My multi config types" FORCE)
endif(CMAKE_BUILD_TYPE MATCHES Debug)
endif(WIN32)

if (MSVC)
#  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../out/lib")
#  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../out/bin")
  ADD_DEFINITIONS(-DWIN32 -D_WINDOWS -D_DLL -D_CONSOLE -D_MAKE_DLL -D_CRT_SECURE_NO_WARNINGS)
  SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
  SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
  SET (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /SAFESEH:NO")
else ()
  ADD_DEFINITIONS(-Wall -DUNIX -DCFGDIR="${CFGDIR}")
endif (MSVC)

message("-------------------------")
message("System            : ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_VERSION}")
message("Compiler          : ${CMAKE_C_COMPILER_ID} ${CMAKE_C_COMPILER_VERSION}")
message("Prefix            : ${CMAKE_INSTALL_PREFIX} (run \"cmake . -DCMAKE_INSTALL_PREFIX:PATH=/other\" for other prefix)")
message("Config dir        : ${CFGDIR}")
message("Build type        : ${CMAKE_CONFIGURATION_TYPES}")
message("Perl support      : ${PERL}")
message("ZIP support       : ${HPTZIP}")
message("-------------------------")
message("hpt               : ${ENABLE_HPT}")
message("htick             : ${ENABLE_HTICK}")
message("nltools           : ${ENABLE_NLTOOLS}")
message("sqpack            : ${ENABLE_SQPACK}")
message("-------------------------")

if (${PERLLIBS_FOUND})
  ADD_DEFINITIONS(-DPERL=1)
endif (${PERLLIBS_FOUND})

if (HPTZIP)
  ADD_DEFINITIONS(-DUSE_HPTZIP=1)
endif()

if (ENABLE_HPT)
  include(hpt)
endif (ENABLE_HPT)

if (ENABLE_HTICK)
  include(htick)
endif (ENABLE_HTICK)

if (ENABLE_NLTOOLS)
  include(nltools)
endif (ENABLE_NLTOOLS)

if (ENABLE_SQPACK)
  include(sqpack)
endif (ENABLE_SQPACK)
